--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -29,7 +29,7 @@ h1{
   height: 100vh;
   background-image: url("tripnote-top.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   
@@ -52,7 +52,7 @@ h1{
   height: 100vh;
   background-image: url("tripnote-top.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   
