--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,16 +12,34 @@
   <body>
     <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container-fluid">
-        <%= link_to("TRIP NOTE", "#") %>
+        <%= link_to("TRIP NOTE", "/") %>
       </div>
       <nav>
         <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to("first","#") %></li>
-          <li><%= link_to("second","#") %></li>
-          <li><%= link_to("third","#") %></li>
+          <li><%= link_to("home", "#") %></li>
+          <li><%= link_to("about","#") %></li>
+          <% if logged_in? %>
+           <li><%= link_to("users","#") %></li>
+           <li class="dropdown">
+             <a href="#" class="dropdown-toggle" date-toggle="dropdown">
+               account<b class="caret"></b>
+             </a>
+             <ul class="dropdown-menu">
+               <%= link_to("profile", current_user) %></li>
+               <%= link_to("settings","#") %></li>
+               <li class="devider"></li>
+              <li>
+                <%= link_to "logout",logout_path, method::delete %>
+              </li>
+             </ul>
+           </li>
+          <% else %>
+           <li><%= link_to("login",login_path) %></li>
+          <% end %>
         </ul>
       </nav>
     </header>
+    
     <div class="container-fluid">
       <%= yield %>
     </div>
