--- a/app/views/top/home.html.erb
+++ b/app/views/top/home.html.erb
@@ -4,7 +4,9 @@
     <div class="row">
       <div class="col-md-2 col-md-offset-5">
         <%= link_to 'Sign Up', 'users/new', class: 'btn btn-block btn-white' %>
+         <p class="text-white">Are you already user? <%= link_to("Log in", login_path) %> </p>
       </div>
+      
     </div>
   </div>
 </div>
