--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,20 +19,11 @@
           <li><%= link_to("home", "#") %></li>
           <li><%= link_to("about","#") %></li>
           <% if logged_in? %>
+           <li><%= link_to("my page","/users/#{current_user.id}") %></li>
            <li><%= link_to("users","#") %></li>
-           <li class="dropdown">
-             <a href="#" class="dropdown-toggle" date-toggle="dropdown">
-               account<b class="caret"></b>
-             </a>
-             <ul class="dropdown-menu">
-               <%= link_to("profile", current_user) %></li>
-               <%= link_to("settings","#") %></li>
-               <li class="devider"></li>
-              <li>
-                <%= link_to "logout",logout_path, method::delete %>
-              </li>
-             </ul>
-           </li>
+           <li><%= link_to("plans", plans_path) %></li>
+           <li><%= link_to("records", records_path) %></li>
+           <li><%= link_to "logout",logout_path, method: :delete %></li>
           <% else %>
            <li><%= link_to("login",login_path) %></li>
           <% end %>
