--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,38 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Tripnote</title>
+    <title>TRIP NOTE</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= render 'layouts/shim' %>
   </head>
 
   <body>
-    <header class="navbar navbar-fixed-top navbar-inverse">
-      <div class="container-fluid">
-        <%= link_to("TRIP NOTE", "/") %>
-      </div>
-      <nav>
-        <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to("home", "#") %></li>
-          <li><%= link_to("about","#") %></li>
-          <% if logged_in? %>
-           <li><%= link_to("my page","/users/#{current_user.id}") %></li>
-           <li><%= link_to("users","#") %></li>
-           <li><%= link_to("plans", plans_path) %></li>
-           <li><%= link_to("records", records_path) %></li>
-           <li><%= link_to "logout",logout_path, method: :delete %></li>
-          <% else %>
-           <li><%= link_to("login",login_path) %></li>
-          <% end %>
-        </ul>
-      </nav>
-    </header>
-    
+    <%= render 'layouts/header' %> 
     <div class="container-fluid">
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
       <%= yield %>
+      <%= render 'layouts/footer' %> 
     </div>
     
   </body>
