--- a/app/views/plans/edit.html.erb
+++ b/app/views/plans/edit.html.erb
@@ -2,9 +2,9 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h1 class="text-center">Add Plan</h1>
+        <h1 class="text-center">Edit Plan</h1>
         
-        <%= form_for @plan do |f| %>
+         <%= form_for @plan do |f| %>
           <div class="form-group">
             <%= f.label :plan_title %>
             <%= f.text_field :plan_title, class: 'form-control' %>
@@ -13,8 +13,8 @@
             <%= f.label :image %>
             <%= f.file_field :image%>
           </div>
-          <%= f.submit '投稿', class: 'btn btn-black btn-block' %>
-        <% end %>
+          <%= f.submit '編集', class: 'btn btn-black btn-block' %>
+         <% end %>
         
       </div>
     </div>
