--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -73,7 +73,6 @@ p{
 
 /* footer */
 footer{
-  margin-top: 30px;
   padding-top: 5px;
   border-top: 1px solid #eaeaea;
   color: #fafafa;
@@ -89,7 +88,33 @@ footer ul li{
   margin-left: 15px;
 }
 
+/* sidebar */
 
+aside{
+  section.user_info{
+    margin-top: 20px;
+  }
+  section{
+    padding: 10px 0;
+    margin-top: 20px;
+    &:firts-child{
+      border: 0;
+      padding-top: 0;
+    }
+    span{
+      display: block;
+      margin-bottom: 3px;
+      line-height: 1;
+    }
+    h1{
+      font-size: 1.4em;
+      text-align: left;
+      letter-spacing: -1px;
+      margin-bottom: 3px;
+      margin-top: 0px;
+    }
+  }
+}
 
 .btn-white {
   margin-top: 50px;
@@ -152,10 +177,8 @@ footer ul li{
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  
   .users-new-container{
-    padding-top: 220px;
-    
+    padding-top: 120px;
     .form-group{
      margin-bottom: 20px;
    }
@@ -182,9 +205,6 @@ footer ul li{
   }
 }
 
-.user-info{
-  margin-top: 500px;
-}
 
 .post-index-wrapper {
   padding-top: 70px;
@@ -220,5 +240,18 @@ footer ul li{
       font-size: 5px;
     }
   
+}
+
+/* remember_me */
+.check_box{
+  margin-top: -10px;
+  margin-bottom: 10px;
+  span{
+    font-weight: normal;
+  }
+}
+
+#session_remember_me{
+  width: auto;
 }
 
