--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <div class="users-new-wrapper">
- <div class="container">
+ <div class="container-fluid">
   <div class="row">
    <div class="col-md-offset-4 col-md-4 users-new-container">
      <%= form_for(@user) do |f|%>
