--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,21 @@
-<div class="user-info text-center">
-  <%= @user.name %>
-  <%= @user.email %>
+<div class="row">
+  <aside class="col-md-4">
+    <section class="user-info">
+      <h1>
+        <% if @user.image.url %>
+          <%= image_tag @user.image.url %>
+        <% else %>
+          <%= image_tag "default.jpeg" %>
+        <% end %>
+      </h1>
+      <h1>
+         <%= @user.name %>
+      </h1>
+      <p>
+        <%= link_to "edit", edit_user_path(id: @user.id) %>
+      </p>
+    </section>
+  </aside>  
 </div>
+  
+
