--- a/app/views/plan_destinations/place_new.html.erb
+++ b/app/views/plan_destinations/place_new.html.erb
@@ -2,8 +2,8 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h1 class="text-center">Register to record</h1>
-         <%= form_for(@plan_destination, url: {controller: 'plan_destinations', action: 'gone' }) do |f| %>
+        <h1 class="text-center">Register Visted Place</h1>
+        <%= form_for(@plan_destination, url: {controller: 'plan_destinations', action: 'place_create' }) do |f| %>
           <div class="form-group">
             <%= f.label :destination_title %>
             <%= f.text_field :destination_title, class: 'form-control' %>
@@ -12,9 +12,15 @@
             <%= f.label :image %>
             <%= f.file_field :image%>
           </div>
+          <div class="form-group">
+            <%= f.label :description %>
+            <%= f.text_area :description, class: 'form-control' %>
+            <%= f.hidden_field :plan_id, value: @plan_id  %>
+          </div>
           <%= f.submit '登録', class: 'btn btn-black btn-block' %>
-         <% end %>
+        <% end %>
       </div>
     </div>
   </div>
 </div>
+
