--- a/app/views/record_destinations/index.html.erb
+++ b/app/views/record_destinations/index.html.erb
@@ -4,8 +4,8 @@
     <%= link_to new_record_destination_path(record_id: @record_id) do %>
       <p class="text-center">Register Place</p>
     <% end %>
+    <div class="post-area">
     <% @record_destinations.each do |record_destination| %>
-      <div class="box">
         <div class="post-index-single">
           <%= image_tag record_destination.image.url,size: '320x240' %>
           <h2 class="post-title">
@@ -14,14 +14,19 @@
           <h3 class="post-description">
             <%= record_destination.description %>
           </h3>
-          <h3>
-            <%= link_to "edit", edit_record_destination_path(id: record_destination.id) %>
-          </h3>
-          <h3>
-            <%= link_to "delete", record_destination, method: :delete %>
-          </h3>
-        </div>
+          <div class="link-area">
+            <%= link_to("https://maps.google.co.jp/maps?q=#{record_destination.destination_title}") do %>
+               <span class="fa fa-map-marker-alt"></span>
+            <% end %>
+            <%= link_to edit_record_destination_path(id: record_destination.id) do %>
+              <span class="fa fa-edit"></span>
+            <% end %>
+            <%= link_to record_destination, method: :delete do %>
+              <span class="fa fa-trash-alt"></span>
+            <% end %>
+          </div>
       </div>
     <% end %>
+    </div>
   </div>
 </div>
