--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,31 +7,17 @@
   <h2>
     <%= @user.name %>
   </h2>
-  <p>
+  <p class="text-black">
     <%= link_to "edit", edit_user_path(id: @user.id) %>
   </p>
 </div>
-
-<% @record_destinations.each do |record_destination| %>
-  <div class="box">
-    <div class="post-index-single">
-      <%= image_tag record_destination.image.url,size: '320x240' %>
-      <h2 class="post-title">
-      <%= record_destination.destination_title %>
-      </h2>
-    </div>
-  </div>
-<% end %>
-<% @plan_destinations.each do |plan_destination| %>
-  <div class="box">
-    <div class="post-index-single">
+<div class="user-box-area">
+  <% @plan_destinations.each do |plan_destination| %>
+    <%= link_to plan_destination_path(id: plan_destination.id) do %>
       <%= image_tag plan_destination.image.url,size: '320x240' %>
-      <h2 class="post-title">
-      <%= plan_destination.destination_title %>
-      </h2>
-    </div>
-  </div>
-<% end %>
+    <% end %>
+  <% end %>
+</div>
 
   
 
