--- a/app/views/plans/visited_index.html.erb
+++ b/app/views/plans/visited_index.html.erb
@@ -1,6 +1,6 @@
 <div class="post-index-wrapper">
   <div class="container-fluid">
-    <h1 class="text-center">Plans Visited</h1>
+    <h1 class="text-center">Visited Place</h1>
     <%= link_to new_record_path do %>
       <p class="text-center">Register Place</p>
     <% end %>
